--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1601840623"></script>
-      <script src="dom.js?v=1601840623"></script>
-      <script src="api.js?v=1601840623"></script>
-      <script src="index.js?v=1601840623"></script>
-      <script src="sbs2-markup/highlight.js?v=1601840623"></script>
-      <script src="sbs2-markup/parse.js?v=1601840623"></script>
-      <script src="sbs2-markup/render.js?v=1601840623"></script>
+      <script src="libbo.js?v=1601852729"></script>
+      <script src="dom.js?v=1601852729"></script>
+      <script src="api.js?v=1601852729"></script>
+      <script src="index.js?v=1601852729"></script>
+      <script src="sbs2-markup/highlight.js?v=1601852729"></script>
+      <script src="sbs2-markup/parse.js?v=1601852729"></script>
+      <script src="sbs2-markup/render.js?v=1601852729"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1601840623" />
+      <link rel="stylesheet" href="index.css?v=1601852729" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -738,14 +738,14 @@ function retext(el, attr)
             <!-- This is a SPECIAL select and will ALWAYS have its options
                filled AFTERWARDS, as a result, a special function must be used
                for setting the value-->
-            <select class="uk-select" data-value=".deferredselect"></select>
+            <select class="uk-select" data-name="name" data-value=".deferredselect"></select>
          </div>
          <div data-youtube>
             <div class="uk-flex uk-flex-middle">
-               <a data-link="href" data-title=".textContent" class="uk-flex-none uk-text-truncate
+               <a data-link="href" data-title=".textContent" class="uk-text-truncate
                   uk-margin-small-right" target="_blank"></a>
-               <a href="#" data-showplayer uk-icon="youtube"></a>
-               <a href="#" data-hideplayer uk-icon="close" hidden></a>
+               <a href="#" class="uk-flex-none" data-showplayer uk-icon="youtube"></a>
+               <a href="#" class="uk-flex-none" data-hideplayer uk-icon="close" hidden></a>
             </div>
          </div>
          <div data-youtubeplayer class="uk-margin-small-top">
@@ -762,7 +762,8 @@ function retext(el, attr)
             <div class="" data-homehistory></div>
             <a href="#" uk-toggle="[data-testarea]">Test area</a>
             <div data-testarea hidden>
-               <div data-tmpl="categoryselect" data-tmpld='{"data-value":503}'></div>
+               <!--<div data-tmpl="categoryselect"
+                  data-tmpld='{"data-value":503}'></div>-->
                <!--<div data-tmpl="minisearch" data-tmpld='{"data-placeholder":"search or whatever"}'></div>-->
       <button onclick="notifySuccess('Oh wow, look at that!')">Notify suc</button>
       <button onclick="notifySuccess('Oh wow, look at that! This is a message that will absolutely overflow')">Notify suc big</button>
@@ -811,20 +812,32 @@ function retext(el, attr)
             </div>
          </div>
          <div data-routecategoryedit class="uk-container uk-margin-top uk-margin-bottom">
-            <div >
-               <form onsubmit="return false">
-                  <fieldset class="uk-fieldset" uk-margin>
-                     <legend class="uk-legend" data-title=".textContent"></legend>
-                     <label>
-                        <input class="uk-input" placeholder="Category Name" name="name"
-                         class="uk-form-large">
-                     </label>
-                     <label>
-                        <textarea class="uk-textarea" placeholder="Category Description" 
-                           name="description"></textarea>
-                     </label>
-                  </fieldset>
+            <h1 data-title=".textContent" class="uk-inline"></h1>
+            <div>
+               <form onsubmit="return false" class="uk-form-stacked">
+                  <!--<fieldset class="uk-fieldset" uk-margin>
+                  <legend class="uk-legend" data-title=".textContent"></legend>-->
+      <div class="uk-form-controls" uk-margin>
+         <label class="uk-form-label" uk-margin>
+            <span>Name</span>
+            <input class="uk-input uk-form-large" name="name">
+         </label>
+         <label class="uk-form-label" uk-margin>
+            <span>Description</span>
+            <textarea rows=3 class="uk-textarea" name="description"></textarea>
+         </label>
+         <label class="uk-form-label" uk-margin>
+            <span>Parent Category</span>
+            <div data-categoryselect></div>
+         </label>
+      <!--<div data-tmpl="categoryselect" data-tmpld='{"data-name":"parentId"}'>
+      </div>-->
+         <input type="submit" value="Submit" class="uk-button uk-button-primary">
+      </div>
+      <!--</fieldset>-->
                </form>
+               <p class="uk-text-meta">Note: you may be unable to edit or
+               create new categories depending on your permissions.</p>
             </div>
             <!--<h1 data-title=".textContent" class="uk-inline"></h1>
             <li data-subcats class="uk-list uk-list-square uk-list-collapse">
